# rust_backend_poc

./: .env  Cargo.toml  compose.yaml  db_url.txt  dockerfile
migrations/: 20251130181145_timescaledb.sql
src/: config.rs  db.rs  handlers.rs  main copy.rs  main.rs  models.rs
