[package]
name = "backend"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.100"
axum = {version = "0.8.7" , features = ["ws"] }
serde = {version = "1.0.228", features = ["derive"]}
serde_json = "1.0.145"
sqlx = {version = "0.8.6", features = ["postgres", "runtime-tokio-native-tls", "migrate", "time"] }
time = { version = "0.3.44", features = ["serde"] }
tokio = { version = "1.48.0", features = ["macros", "rt-multi-thread"] }

[[bin]]
name = "backend"
path = "./src/main.rs"
